--- a/osm2xp/html/gettingstarted/gettingOsmData.html
+++ b/osm2xp/html/gettingstarted/gettingOsmData.html
@@ -11,6 +11,7 @@ To generate x-plane data with osm2xp, the first thing you'll need is
 an open street map file.<br>
 Here are some place to get osm data :
 <ul>
+<li> <a href="http://extract.bbbike.org/"> Very convenient site, which allows to extract only the area selected on map.</a> </li>
 <li> <a href="http://www.openstreetmap.org/">Official Open street
 map website</a> , world map where you can export small zones
 (5000 nodes max, osm files) </li>
